[gd_scene load_steps=6 format=3 uid="uid://c3euv2ekxge8r"]

[ext_resource type="Script" uid="uid://cfqd7xnabgsqf" path="res://board.gd" id="1_jqgjh"]
[ext_resource type="PackedScene" uid="uid://dsjsrqfeqh1to" path="res://paddle.tscn" id="1_p0ybc"]
[ext_resource type="PackedScene" uid="uid://10jjth5ovx" path="res://ball.tscn" id="2_psm7c"]
[ext_resource type="PackedScene" uid="uid://bdb8fgl1ap2aq" path="res://boardgui.tscn" id="3_8l818"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0ybc"]
size = Vector2(1, 1)

[node name="Board" type="Node2D"]
script = ExtResource("1_jqgjh")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="LeftPaddle" parent="." instance=ExtResource("1_p0ybc")]
position = Vector2(40, 324)
color = Color(0.381413, 0.684276, 0.383954, 1)

[node name="RightPaddle" parent="." instance=ExtResource("1_p0ybc")]
position = Vector2(1112, 324)
color = Color(0.721527, 0.342026, 0.242952, 1)
action_up = "RemoteUp"
action_down = "RemoteDown"

[node name="Ball" parent="." instance=ExtResource("2_psm7c")]
position = Vector2(576, 324)
speed = 500.0

[node name="TopWall" type="StaticBody2D" parent="."]
scale = Vector2(1152, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_p0ybc")

[node name="ColorRect" type="ColorRect" parent="TopWall"]
offset_right = 1.0
offset_bottom = 1.0
color = Color(0.220101, 0.288454, 1, 1)

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2(0, 633)
scale = Vector2(1152, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_p0ybc")

[node name="ColorRect" type="ColorRect" parent="BottomWall"]
offset_right = 1.0
offset_bottom = 1.0
color = Color(0.220101, 0.288454, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreGUI" parent="CanvasLayer" instance=ExtResource("3_8l818")]
left_score = 0

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(576, 0, 576, 648)
width = 2.0
default_color = Color(0.219608, 0.290196, 1, 1)

[connection signal="ball_out_on_left" from="Ball" to="." method="_on_ball_ball_out_on_left"]
[connection signal="ball_out_on_right" from="Ball" to="." method="_on_ball_ball_out_on_right"]
